# CharacterGraph

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  README.md  ecosystem.config.cjs  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
data/artifacts/: aegis.json  ambrosia.json  bow_of_heracles.json  bow_of_odysseus.json  caduceus.json  club_of_heracles.json  cornucopia.json  golden_apple.json  golden_fleece.json  harpe.json  helm_of_darkness.json  lightning.json  lion_skin.json  lyre.json  medusa_head.json  necklace_of_harmonia.json  pandoras_box.json  shield_of_achilles.json  spear_of_achilles.json  syrinx.json  thread_of_ariadne.json  trident.json  trojan_horse.json  winged_sandals.json
data/characters/: achilles.json  aeneas.json  agamemnon.json  andromeda.json  aphrodite.json  apollo.json  ares.json  argus_panoptes.json  ariadne.json  arion.json  artemis.json  atalanta.json  athena.json  atlas.json  bellerophon.json  cadmus.json  calydonian_boar.json  cassandra.json  cerberus.json  ceryneian_hind.json  charon.json  charybdis.json  chimera.json  circe.json  (+55 more)
docs/: design-freeze.md
prisma/: schema.prisma
public/: sw.js
scripts/: check_character_panel_zoom.py  link-assets.mjs
scripts/data/: README.md  build_owns.py  extract_relations.py  extract_structured.py  fetch_wiki.py  llm_client.py  project_io.py  pyproject.toml  schemas.py  translate_quotes.py  validate_project.py
scripts/images/: README.md  generate_branch_portrait.py  generate_portraits.py  health_check.py  pyproject.toml  regen_with_ref.py  style_test.py  test_generate_portraits.py
(+674 files in other folders)
