[project]
name = "greekmyths-data-pipeline"
version = "0.1.0"
description = "Wikipedia 抓取 + LLM 结构化提取 → JSON"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "wikipedia-api>=0.7.1",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.40.0",
    "tenacity>=9.0.0",
    "httpx>=0.27.0",
    "scrapling>=0.4.9",
    "curl-cffi>=0.15.0",
    "playwright>=1.61.0",
    "browserforge>=1.2.4",
]
